# website-scrapping

./: places.py  pyproject.toml  tijuana_no_website.csv
codes/: exhaustive.py  only_phone.py  tijuana_places_no_website.py
csv/: places_with_phone.csv  tijuana_no_website.csv
