[tool.poetry]
name = "website-scrapping"
version = "0.1.0"
description = ""
authors = ["musel25 <muselemmanuel@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
googlemaps = "^4.10.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
